# labs_oop

./: .gitignore  README.md  REVIEW_FEEDBACK.md
include/: pure_number.h
lab_1/: CMakeLists.txt  README.md
lab_1/include/: pure_number.h
lab_1/src/: main.cpp  pure_number.cpp
lab_1/test/: tests.cpp
lab_2/: CMakeLists.txt  README.md
lab_2/include/: twelve.h
lab_2/src/: main.cpp  twelve.cpp
lab_2/test/: tests.cpp
lab_3/: CMakeLists.txt  README.md
lab_3/include/: figures.h  point.h  rectangle.h  square.h  trapezoid.h  vector_figures.h  vector_points.h
lab_3/src/: figures.cpp  main.cpp  point.cpp  rectangle.cpp  square.cpp  trapezoid.cpp  vector_figures.cpp  vector_points.cpp
lab_3/test/: test_figures.cpp  test_point.cpp  test_vector.cpp
lab_4/: CMakeLists.txt  Readme.md
lab_4/include/: array.h  figure.h  hexagon.h  octagon.h  point.h  triangle.h
lab_4/src/: array.ipp  figure.ipp  hexagon.ipp  main.cpp  octagon.ipp  point.ipp  triangle.ipp
lab_4/test/: array_test.cpp  figure_test.cpp  hexagon_test.cpp  octagon_test.cpp  point_test.cpp  triangle_test.cpp
lab_5/: CMakeLists.txt
lab_5/include/: dynamic_memory_resource.hpp  queue.hpp  queue.ipp
lab_5/src/: dynamic_memory_resource.cpp  main.cpp
lab_5/test/: test_integration.cpp  test_memory_resource.cpp  test_queue.cpp
lab_6/: CMakelists.txt
lab_6/include/: dungeon.h  npc.h  npc_factory.h  observer.h  visitor.h
lab_6/src/: dungeon.cpp  main.cpp  npc.cpp  npc_factory.cpp  observer.cpp  visitor.cpp
lab_6/tests/: test_combat.cpp  test_dungeon.cpp  test_factory.cpp  test_npc.cpp  test_observer.cpp
lab_7/: CMakeLists.txt
lab_7/include/: battle.h  coro.h  coroutine_npc.h  defs.h  entities.h  fight_manager.h  game_world.h  map.h  movement.h  npc.h  npc_factory.h  observer.h  visitor.h
lab_7/src/: coroutine_npc.cpp  entities.cpp  factory.cpp  fight_manager.cpp  game_world.cpp  main.cpp  movement.cpp  npc.cpp  npc_factory.cpp  observer.cpp  visitor.cpp
lab_7_new/: CMakeLists.txt
lab_7_new/include/: factory.h  npc.h  observer.h  visitor.h
lab_7_new/src/: battle.cpp  map.cpp
src/: pure_number.cpp
